--- a/frontend/user-interface/package.json
+++ b/frontend/user-interface/package.json
@@ -4,8 +4,15 @@
   "private": true,
   "dependencies": {
     "antd": "^3.19.2",
+    "axios": "^0.19.0",
+    "chai": "^4.2.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "mocha": "^6.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-pure-lifecycle": "^3.0.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
